--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-parallax-tilt": "^1.7.119",
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-typed": "^1.2.0",
     "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.0"
